Fix pigeon size on iOS

--- a/public/global.css
+++ b/public/global.css
@@ -18,8 +18,8 @@ h1.page-heading {font-family: tex_gyre_pagellaregular;
 	vertical-align: middle;
 	}
 
-.pigeon-image {width: 150px; height: 142px; margin-left: auto;}
-.pigeon-image-mobile {width: 150px;}
+.pigeon-image {width: 150px; height: 142px; margin-left: auto; display: inline-block;}
+.pigeon-image-mobile {idth: 150px; height: 142px; display: inline-block;}
 .buildings {width: 350px; height: 201.719px; margin:1rem 0;}
 #subtitle {background-color: #FFF;}
 .map-text {font-size:1.25rem;}
